--- a/BookPoolV2/Views/Home/MyBooks.cshtml
+++ b/BookPoolV2/Views/Home/MyBooks.cshtml
@@ -229,7 +229,7 @@
             </ul>
 
             <div class="tabs-wrap">
-                <div id="chooseBook" class="col s12" style="padding:20px!important;border:1px solid red;">
+                <div id="chooseBook" class="col s12" style="padding:20px!important;">
                     <input id="findMyBookValue" style="border-bottom:1px solid white!important;" placeholder="Find & Select Your Book" class="input-field" />
                     <div style="float:left;width: 100%;padding-right: 15px;">
                         <a id="findMyBook" class="waves-effect waves-light btn-large pull-right red">
@@ -241,7 +241,7 @@
 
                     </div>
                 </div>
-                <div id="bookInfo" class="col s12" style="padding:20px!important;border:1px solid red;">
+                <div id="bookInfo" class="col s12" style="padding:20px!important;">
                     <div style="float:left;width: 100%;padding-right: 15px;">
                         <select id="bookLanguage">
                             <option>Language</option>
@@ -272,7 +272,7 @@
                         </select>
                     </div>
                 </div>
-                <div id="pricing" class="col s12" style="padding:20px!important;border:1px solid red;">
+                <div id="pricing" class="col s12" style="padding:20px!important;">
                     <div style="float:left;width: 100%;padding-right: 15px;">
                         <select id="bookCondition">
                             <option value="">Condition</option>
