--- a/BookPoolV2/Views/Shared/_Layout_Out.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout_Out.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using BookPoolV2.Models
+@using Microsoft.AspNet.Identity
+
 @{
     Layout = null;
 }
@@ -29,6 +31,7 @@
     <script src="/Content/js/shop/ui.js"></script>
     <script src="/Content/js/shopui.js"></script>
     <script src="/Content/js/quantity.js"></script>
+    <script src="https://kit.fontawesome.com/1afc59ddd6.js" crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.css" />
@@ -42,6 +45,34 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#FFE1C4" />
     @*<link rel="manifest" href="/manifest.webmanifest" />*@
+
+    <style>
+        #side-form {
+            z-index: 2147483647 !important
+        }
+
+        .media-buttons .btn:hover {
+            background-color: #445c8e;
+        }
+
+        .media-buttons .btn {
+            margin: 0 0.5rem 1rem;
+            display: inline-block;
+        }
+
+        .media-buttons button i {
+            float: left;
+            font-size: 19px;
+            width: 55px;
+            padding: 14px 15px;
+            border-right: 1px solid rgba(0,0,0,.2);
+        }
+
+        button.facebook {
+            background-color: #445c8e;
+        }
+    </style>
+
 </head>
 
 <body class="white lighten-4">
@@ -77,96 +108,9 @@
         </div>
     </nav>
 
-    <ul id="side-menu" class="sidenav side-menu">
-        <li>
-            <div class="user-view">
-                <a href="#user"><img class="circle" src="img/icons/user_icon.png"></a>
-                <a href="#name"><span class="black-text name">John Doe</span></a>
-                <a href="#email"><span class="black-text email">jdandturk@gmail.com</span></a>
-            </div>
-        </li>
-        <li>
-            <a href="@Url.Action("MyWishes","Home")" class="waves-effect">
-                My Wishes
-                <i class="material-icons float-right">arrow_right</i>
-            </a>
-        </li>
-        <li>
-            <a href="@Url.Action("MyBooks","Home")" class="waves-effect">
-                My Books
-                <i class="material-icons float-right">arrow_right</i>
-            </a>
-        </li>
-        <li>
-            <a href="@Url.Action("MyOrders","Home")" class="collapsible-header waves-effect">
-                My Orders
-                <i class="material-icons float-right">arrow_right</i>
-            </a>
-        </li>
-        <li>
-            <a href="@Url.Action("About","Home")" class="waves-effect">
-                About
-                <i class="material-icons float-right">arrow_right</i>
-            </a>
-        </li>
-        <li><div class="divider"></div></li>
-        <li>
-            <a href="/Home/Contact" class="waves-effect">
-                <i class="material-icons">mail_outline</i>Contact Us
-            </a>
-        </li>
-    </ul>
+    @Html.Partial("_UsersMenu")
 
-    <div id="side-form" class="sidenav side-form">
-        <form class="add-recipe container section">
-            <h6>Saved Addresses</h6>
-            <div class="row">
-                <div class="col s12 m12" style="padding:0;">
-                    <div class="card">
-                        <div class="card-content" style="padding:10px;">
-                            <span class="card-title" style="line-height:10px; font-size:15px; font-weight:500;">
-                                Home
-                                <i class="material-icons" style="font-size:22px; line-height:12px; color:var(--primaryRed); float:right;">location_on</i>
-                            </span>
-                            <p style="font-size:12px;">
-                                Furn el Chebbek, Tohwita, Malaab al baladi street, Raymond semaan building, 6th floor, Georges Nasser Appartment
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12 m12" style="padding:0;">
-                    <div class="card">
-                        <div class="card-content" style="padding:10px;">
-                            <span class="card-title" style="line-height:10px; font-size:15px; font-weight:500;">
-                                Sarah's
-                                <i class="material-icons" style="font-size:22px; line-height:12px; color:var(--title); float:right;">location_on</i>
-                            </span>
-                            <p style="font-size:12px;">
-                                Adma, Blue street, Next to old LBC, 536 Bulding, 6th floor.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="divider"></div>
-
-            <h6>New Address</h6>
-            <div class="input-field">
-                <input id="address_name" placeholder="e.g. Home, Work" type="text" class="validate" data-length="50">
-                <label for="address_name">Address Name</label>
-            </div>
-            <div class="input-field">
-                <input id="address_full" placeholder="e.g. Town, Street, Building" type="text" class="validate" data-length="250">
-                <label for="address_full">Full Address</label>
-            </div>
-            <div class="input-field center">
-                <button class="btn-small">Add</button>
-            </div>
-        </form>
-    </div>
+    @Html.Partial("_PartialUsersLocation")
 
 
     <script type="text/javascript">
@@ -177,7 +121,9 @@
 
     </script>
 
-    <div id="mainSearchBar" style="background:white; height:55px;">
+    <div id="mainSearchBar" style="        background: white;
+        height: 55px;
+">
         <div class="row searchBar">
             <div class="col s12 m12 l12">
                 <div class="sectionnav">
