--- a/BookPoolV2/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/BookPoolV2/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@model BookPoolV2.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
-<hr />
+@*<h4>Use another service to log in.</h4>
+<hr />*@
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
     if (loginProviders.Count() == 0) {
@@ -16,10 +16,15 @@
     else {
         using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl })) {
             @Html.AntiForgeryToken()
-            <div id="socialLoginList">
+            <div id="socialLoginList" class="media-buttons">
                 <p>
-                    @foreach (AuthenticationDescription p in loginProviders) {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                    @foreach (AuthenticationDescription p in loginProviders)
+                    {
+                        <button id="@p.AuthenticationType" type="submit" class="btn col-sm-12 facebook" data-toggle="tooltip" data-placement="top" name="provider" value="@p.AuthenticationType">
+                            <i class="fab fa-facebook-f" style="float:left;"></i>
+                            Login with Facebook
+                        </button>
+                        @*<button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>*@
                     }
                 </p>
             </div>
