--- a/BookPoolV2/Views/Shared/_AvailableBook.cshtml
+++ b/BookPoolV2/Views/Shared/_AvailableBook.cshtml
@@ -21,7 +21,7 @@
         <div class="card-body">
             <div style="width:100%;">
                 <div style="float:left;width: 100%;padding-right: 15px;">
-                    <h5 class="card-title" style="padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;font-weight:bold;">
+                    <h5 class="card-title" style="margin-top:0;padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;font-weight:bold;">
                         @Model.BookName
                     </h5>
                     @{
