--- a/BookPoolV2/Views/Shared/_UnavailableBook.cshtml
+++ b/BookPoolV2/Views/Shared/_UnavailableBook.cshtml
@@ -20,7 +20,7 @@
         <div class="card-body">
             <div style="width:100%;">
                 <div style="float:left;width: 100%;padding-right: 15px;">
-                    <h5 class="card-title" style="padding-top:0px;color: black;font-size: 16px;font-weight:bold;">
+                    <h5 class="card-title" style="margin-top:0;padding-top:0px;color: black;font-size: 16px;font-weight:bold;">
                         @Model.BookName
                     </h5>
                     @{
@@ -34,12 +34,12 @@
                     <p class="card-text" style="margin-bottom:6px;margin-top:6px;color:var(--primaryGrey);">
                         Price: Not Available
                     </p>
-                    <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:var(--secondaryOrange)">
+                    <p class="card-text" style="margin-bottom: 6px; margin-top: 6px; font-size: 12px; color: var(--secondaryOrange)">
                         No one has offered to sell this book
                     </p>
                     <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:var(--secondaryOrange)">
                         <button type="button" class="waves-effect waves-light btn-small modal-trigger" data-target="search-for-my-book-modal">
-                            <i class="material-icons left">search</i>
+                            <i class="material-icons left" style="        margin-right: 0;">search</i>
                             Find it for me
                         </button>
                     </p>
