--- a/BookPoolV2/Views/Academic/Index.cshtml
+++ b/BookPoolV2/Views/Academic/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- Modal Structure -->
-<div id="search-for-my-book-modal" class="modal bottom-sheet">
+@*<div id="search-for-my-book-modal" class="modal bottom-sheet">
     <div class="modal-content">
         <h4>Search for my book</h4>
         <p>
@@ -12,7 +12,7 @@
         <a href="#!" class="modal-close waves-effect waves-green btn-flat pull-left red">No, I'll search for it</a>
         <a href="#!" class="modal-close waves-effect waves-green btn-flat green">Yes please</a>
     </div>
-</div>
+</div>*@
 
 <div class="row itemslist">
     <div class="col s12 m12 l12" style="margin-bottom:30px;">
