--- a/BookPoolV2/Views/Home/Index.cshtml
+++ b/BookPoolV2/Views/Home/Index.cshtml
@@ -60,7 +60,7 @@
                     foreach (var category in categories)
                     {
                         <td>
-                            <div class="card mediumfilter category" style="box-shadow:none; border: 1px #EFEFEF solid;">
+                            <div class="card mediumfilter category" data-CategoryID="@category.ID" style="box-shadow:none; border: 1px #EFEFEF solid;">
                                 <div class="card-content">
                                     <span class="card-title" style="height:80px;padding:10px;">
                                         <img width="70" src="@category.CategoryImage" />
@@ -88,13 +88,13 @@
         {
             if (book.OwnerUserID == null)
             {
-                <div class="col s12 m6 l4" style="height:250px;">
+                <div class="col s12 m6 l4" style="height:250px;overflow:hidden;margin-bottom:15px;">
                     @Html.Partial("_UnavailableBook", book)
                 </div>
             }
             else
             {
-                <div class="col s12 m6 l4">
+                <div class="col s12 m6 l4" style="height:250px;overflow:hidden;margin-bottom:15px;">
                     @Html.Partial("_AvailableBook", book)
                 </div>
             }
@@ -106,6 +106,6 @@
 <script>
     $(document).ready(function () {
         booksSection_active();
-        $('.modal-trigger').leanModal();
+        //$('.modal-trigger').leanModal();
     });
 </script>
