--- a/BookPoolV2/Views/Home/MyWishes.cshtml
+++ b/BookPoolV2/Views/Home/MyWishes.cshtml
@@ -1,4 +1,38 @@
-﻿<div id="mainSearchBar" style="background: white; height: 55px; display: none;" class="">
+﻿@using BookPool.DataObjects.DTO
+@using BookPool.DataObjects.EDM
+@using System;
+@using System.Globalization;
+
+@{
+    ViewBag.Title = "MyOrders";
+    Layout = "~/Views/Shared/_Layout_Out.cshtml";
+
+    List<BookPoolResult> myBooks = new List<BookPoolResult>();
+    if (ViewBag.MyBooks != null)
+    {
+        myBooks = ViewBag.MyBooks as List<BookPoolResult>;
+    }
+
+    List<Category> categories = new List<Category>();
+    if (ViewBag.Categories != null)
+    {
+        categories = ViewBag.Categories as List<Category>;
+    }
+
+    List<Condition> conditions = new List<Condition>();
+    if (ViewBag.Conditions != null)
+    {
+        conditions = ViewBag.Conditions as List<Condition>;
+    }
+
+    List<Language> languages = new List<Language>();
+    if (ViewBag.Languages != null)
+    {
+        languages = ViewBag.Languages as List<Language>;
+    }
+}
+
+<div id="mainSearchBar" style="background: white; height: 55px; display: none;" class="">
     <div class="row searchBar">
         <div class="col s12 m12 l12">
             <div class="sectionnav">
@@ -19,198 +53,35 @@
 
 </div>
 
-<div id="mainSortByFilter" style="background: white; height: 50px; display: none;" class="">
-    <div class="row">
-        <div class="col s12 m12 l12 noscroll" style="overflow:auto;">
-            <div style="min-width: 800px;">
-                <div id="filtersClickableTag" class="card horizontal filterContainerTrigger smallfilter">
-                    <div class="card-image" style="padding:0;">
-                        <i class="material-icons">filter_list</i>
-                    </div>
-                    <div class="card-stacked">
-                        <div class="card-content" style="padding: 2px 10px;">
-                            <p>Filters</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card horizontal smallfilter">
-                    <div class="card-stacked">
-                        <div class="card-content" style="padding: 2px 10px;">
-                            <p>Rating: 4.0+</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card horizontal smallfilter">
-                    <div class="card-image" style="padding:0;">
-                        <i class="material-icons">motorcycle</i>
-                    </div>
-                    <div class="card-stacked">
-                        <div class="card-content" style="padding: 2px 10px;">
-                            <p>Express Delivery</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card horizontal smallfilter filterContainerTrigger">
-                    <div class="card-stacked">
-                        <div class="card-content" style="padding: 2px 10px;">
-                            <p>Sort by</p>
-                        </div>
-                    </div>
-                    <div class="card-image" style="padding:0; float:right;">
-                        <i class="material-icons">arrow_drop_down</i>
-                    </div>
-                </div>
-                <div class="card horizontal smallfilter">
-                    <div class="card-stacked">
-                        <div class="card-content" style="padding: 2px 10px;">
-                            <p>Great Offers</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card horizontal smallfilter filterContainerTrigger">
-                    <div class="card-stacked">
-                        <div class="card-content" style="padding: 2px 10px;">
-                            <p>Rating</p>
-                        </div>
-                    </div>
-                    <div class="card-image" style="padding:0; float:right;">
-                        <i class="material-icons">arrow_drop_down</i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+@Html.Partial("_Filter")
 
 <div class="row itemslist container">
-    <div class="col s12 m12 l12">
+    <div class="col s12 m12 l12" style="margin-bottom:30px;">
         <h5>
-            MY WISHES
+            Find these books for me
             <i class="material-icons" style="color: red;">favorite</i>
         </h5>
     </div>
 
 
-    <div class="col s12 m12 l6" style="overflow-x:auto; overflow-y:hidden;">
-        <div class="card gotoproduct" style="box-shadow:none; -webkit-box-shadow:none; max-width:400px;">
-            <div class="card-horizontal" style="overflow: hidden;">
-                <div class="img-square-wrapper" style="width: 100px;">
-                    <img class="smallImage" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1543181274l/40909433.jpg" alt="Card image cap">
+    <div class="col s12 m12 l12" style="margin-bottom:30px;">
+        @{
+            if (myBooks.Count() == 0)
+            {
+                <h6>
+                    You still haven't asked Bookpool to find any book that you weren't able to find.
+                </h6>
+            }
+            foreach (var book in myBooks)
+            {
+                <div class="col s12 m12 l12">
+                    @Html.Partial("_SearchForBook", book)
+                    <hr />
                 </div>
-                <div class="card-body">
-                    <div style="width:100%;">
-                        <div style="float:left;height: 100px;width: 100%;padding-right: 15px;">
-                            <h5 class="card-title" style="padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;">
-                                An economist walks into a brothel
-                            </h5>
-                            <p class="card-text" style="">
-                                <button class="btn waves-effect waves-light red lighten-2">
-                                    Delete
-                                </button>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+            }
+        }
     </div>
 
-
-    <div class="col s12 m12 l6" style="overflow-x:auto; overflow-y:hidden;">
-        <div class="card gotoproduct" style="box-shadow:none; -webkit-box-shadow:none; max-width:400px;">
-            <div class="card-horizontal" style="overflow: hidden;">
-                <div class="img-square-wrapper" style="width: 100px;">
-                    <img class="smallImage" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1543181274l/40909433.jpg" alt="Card image cap">
-                </div>
-                <div class="card-body">
-                    <div style="width:100%;">
-                        <div style="float:left;height: 100px;width: 100%;padding-right: 15px;">
-                            <h5 class="card-title" style="padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;">
-                                An economist walks into a brothel
-                            </h5>
-                            <p class="card-text" style="">
-                                <button class="btn waves-effect waves-light red lighten-2">
-                                    Delete
-                                </button>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="col s12 m12 l6" style="overflow-x:auto; overflow-y:hidden;">
-        <div class="card gotoproduct" style="box-shadow:none; -webkit-box-shadow:none; max-width:400px;">
-            <div class="card-horizontal" style="overflow: hidden;">
-                <div class="img-square-wrapper" style="width: 100px;">
-                    <img class="smallImage" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1543181274l/40909433.jpg" alt="Card image cap">
-                </div>
-                <div class="card-body">
-                    <div style="width:100%;">
-                        <div style="float:left;height: 100px;width: 100%;padding-right: 15px;">
-                            <h5 class="card-title" style="padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;">
-                                An economist walks into a brothel
-                            </h5>
-                            <p class="card-text" style="">
-                                <button class="btn waves-effect waves-light red lighten-2">
-                                    Delete
-                                </button>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="col s12 m12 l6" style="overflow-x:auto; overflow-y:hidden;">
-        <div class="card gotoproduct" style="box-shadow:none; -webkit-box-shadow:none; max-width:400px;">
-            <div class="card-horizontal" style="overflow: hidden;">
-                <div class="img-square-wrapper" style="width: 100px;">
-                    <img class="smallImage" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1543181274l/40909433.jpg" alt="Card image cap">
-                </div>
-                <div class="card-body">
-                    <div style="width:100%;">
-                        <div style="float:left;height: 100px;width: 100%;padding-right: 15px;">
-                            <h5 class="card-title" style="padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;">
-                                An economist walks into a brothel
-                            </h5>
-                            <p class="card-text" style="">
-                                <button class="btn waves-effect waves-light red lighten-2">
-                                    Delete
-                                </button>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="col s12 m12 l6" style="overflow-x:auto; overflow-y:hidden;">
-        <div class="card gotoproduct" style="box-shadow:none; -webkit-box-shadow:none; max-width:400px;">
-            <div class="card-horizontal" style="overflow: hidden;">
-                <div class="img-square-wrapper" style="width: 100px;">
-                    <img class="smallImage" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1543181274l/40909433.jpg" alt="Card image cap">
-                </div>
-                <div class="card-body">
-                    <div style="width:100%;">
-                        <div style="float:left;height: 100px;width: 100%;padding-right: 15px;">
-                            <h5 class="card-title" style="padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;">
-                                An economist walks into a brothel
-                            </h5>
-                            <p class="card-text">
-                                <button class="btn waves-effect waves-light red lighten-2">
-                                    Delete
-                                </button>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 
@@ -224,6 +95,26 @@
 
     $(document).ready(function () {
         productsSection_active();
+    });
+
+    $(document).on('click', '.deleteMyBook', function () {
+
+        var myBookID = $(this).attr('data-BookID');
+
+        $.ajax({
+            url: '@Url.Action("DeleteSearchForBook","Home")',
+            type: 'POST',
+            dataType: 'json',
+            data: {
+                MyBookID: myBookID
+            },
+            success: function (data) {
+                location.reload();
+            },
+            error: function (request, error) {
+                location.reload();
+            }
+        });
     });
 
 </script>
