--- a/BookPoolV2/Views/Home/Product.cshtml
+++ b/BookPoolV2/Views/Home/Product.cshtml
@@ -243,13 +243,13 @@
         {
             if (book.OwnerUserID == null)
             {
-                <div class="col s12 m6 l4" style="height:250px;">
+                <div class="col s12 m6 l4" style="height:250px;overflow:hidden;margin-bottom:15px;">
                     @Html.Partial("_UnavailableBook", book)
                 </div>
             }
             else
             {
-                <div class="col s12 m6 l4">
+                <div class="col s12 m6 l4" style="height:250px;overflow:hidden;margin-bottom:15px;">
                     @Html.Partial("_AvailableBook", book)
                 </div>
             }
@@ -304,7 +304,7 @@
         }, 1000);
 
         var shopId = $(this).data('data-shopId');
-        var url = '@Url.Action("FilteredProducts","Home")';
+        var url = '@Url.Action("FilteredByCategory", "Home")';
         window.location = url;
 
     });
