--- a/BookPoolV2/Views/Shared/_UnavailableBook.cshtml
+++ b/BookPoolV2/Views/Shared/_UnavailableBook.cshtml
@@ -38,8 +38,8 @@
                         No one has offered to sell this book
                     </p>
                     <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:var(--secondaryOrange)">
-                        <button type="button" class="waves-effect waves-light btn-small modal-trigger" data-target="search-for-my-book-modal">
-                            <i class="material-icons left" style="        margin-right: 0;">search</i>
+                        <button type="button" class="waves-effect waves-light btn-small modal-trigger findThisBookForMe" data-GoogleBookID="@Model.GoogleID" data-target="search-for-my-book-modal">
+                            <i class="material-icons left" style="margin-right: 0;">search</i>
                             Find it for me
                         </button>
                     </p>
