--- a/BookPoolV2/Views/Shared/_UsersMenu.cshtml
+++ b/BookPoolV2/Views/Shared/_UsersMenu.cshtml
@@ -15,7 +15,7 @@
             </li>
             <li>
                 <a href="@Url.Action("MyWishes","Home")" class="waves-effect">
-                    My Wishes
+                    Books to find
                     <i class="material-icons float-right">arrow_right</i>
                 </a>
             </li>
