--- a/BookPoolV2/Views/Home/FilteredByCategory.cshtml
+++ b/BookPoolV2/Views/Home/FilteredByCategory.cshtml
@@ -15,6 +15,15 @@
     Category category = ViewBag.Category as Category;
 }
 
+<div id="goToHomeContainer" style="display:inline-flex;">
+    <a href="/" class="sidenav-trigger" style="display:inherit; width:30px; color:var(--primaryRed); cursor:pointer;">
+        <i class="material-icons">keyboard_arrow_left</i>
+    </a>
+    <a href="/" class="sidenav-trigger" style="display:inherit; margin-left:0px; cursor:pointer;">
+        <span style="font-family:AvenirNextBold;">Home</span>
+    </a>
+</div>
+
 <div class="row">
     <div class="col s12 m12 l12" style="overflow-x:auto; overflow-y:hidden;">
         <h5>FILTERED BY CATEGORY</h5>
