--- a/BookPoolV2/Views/Shared/_Layout_Out.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout_Out.cshtml
@@ -121,9 +121,7 @@
 
     </script>
 
-    <div id="mainSearchBar" style="        background: white;
-        height: 55px;
-">
+    <div id="mainSearchBar" style="background: white;height: 55px;">
         <div class="row searchBar">
             <div class="col s12 m12 l12">
                 <div class="sectionnav">
