--- a/BookPoolV2/Views/Home/Product.cshtml
+++ b/BookPoolV2/Views/Home/Product.cshtml
@@ -13,6 +13,15 @@
     BookPoolResult availableBook = ViewBag.AvailableBook as BookPoolResult;
 }
 
+<div id="goToHomeContainer" style="display:inline-flex;width:100%;">
+    <a href="/" class="sidenav-trigger" style="display:inherit; width:30px; color:var(--primaryRed); cursor:pointer;">
+        <i class="material-icons">keyboard_arrow_left</i>
+    </a>
+    <a href="/" class="sidenav-trigger" style="display:inherit; margin-left:0px; cursor:pointer;">
+        <span style="font-family:AvenirNextBold;">Home</span>
+    </a>
+</div>
+
 <div class="row" style="margin-bottom:75px;margin-top:50px;">
     <div class="selectedProduct col s12 m12 l12">
         <div class="card">
@@ -22,7 +31,7 @@
                     <a class="carousel-item active" href="#one!">
                         <img src="@availableBook.ImageURL">
                     </a>
-                    <a class="carousel-item" href="#two!">
+                    @*<a class="carousel-item" href="#two!">
                         <img src="@availableBook.ImageURL">
                     </a>
                     <a class="carousel-item" href="#three!">
@@ -36,16 +45,16 @@
                     </a>
                     <a class="carousel-item" href="#four!">
                         <img src="@availableBook.ImageURL">
-                    </a>
+                    </a>*@
                 </div>
 
                 <a class="btn-floating waves-effect waves-light white" style="text-align: center;color: white;background-color: #60842D!important;">
                     @availableBook.AverageRating
                 </a>
 
-                <a class="btn-floating halfway-fab waves-effect waves-light white" style="bottom:-40px;">
+                @*<a class="btn-floating halfway-fab waves-effect waves-light white" style="bottom:-40px;">
                     <i class="material-icons red">favorite_border</i>
-                </a>
+                </a>*@
             </div>
             <div class="card-content col s12 m12 l9" style="padding-bottom:0px;margin-top:50px;">
                 <div class="row" style="margin-bottom:0px;">
@@ -83,10 +92,10 @@
                         <div class="row" style="margin-top:15px;">
                             <div>
                                 @*<div class="card-panel productInfoSize" style="float:left;text-align: center;margin-right: 10px; padding:10px;">
-                                    <span>
-                                        Ebook
-                                    </span>
-                                </div>*@
+                                        <span>
+                                            Ebook
+                                        </span>
+                                    </div>*@
                                 <div class="card-panel productInfoSize productInfoactive" style="float:left;text-align: center;margin-right: 10px; padding:10px;">
                                     <span>
                                         Hard Copy
@@ -96,7 +105,7 @@
                         </div>
                     </div>
                     <div class="col s12 m12 l3" style="padding-top:20px!important;">
-                        <div class="row addtoCart" style="text-align: center; color: var(--primaryGrey);">
+                        <div class="row addtoCart" data-BookID="@availableBook.ID" data-Price="@availableBook.Price" style="text-align: center; color: var(--primaryGrey);">
                             <i class="material-icons" style="font-size: 50px; width:100%;">add_shopping_cart</i>
                             <span>Add to cart</span>
                         </div>
@@ -281,17 +290,6 @@
         $(this).addClass('productInfoColoractive');
     });
 
-    $(document).on('click', '.addtoCart', function () {
-
-        var highlightElement = $(this);
-
-        highlightElement.addClass('highlighted');
-
-        setTimeout(function () {
-            highlightElement.removeClass('highlighted');
-        }, 1000);
-
-    });
 
     $(document).on('click', '.gotouserbooks', function () {
 
@@ -309,22 +307,6 @@
 
     });
 
-
-    $(document).on('click', '.addtoCart', function () {
-        var pluriel = '';
-        var itemsInCart = parseInt($('#itemsincartbadge').text());
-        var numberOfItemsinCart = itemsInCart;
-        $('#itemsincartbadge').text(numberOfItemsinCart);
-
-        $('#itemsincartbadge').parent().find('.material-icons').css('color', 'var(--primaryRed)');
-        $('#itemsincartbadge').show();
-
-        if (numberOfItemsinCart > 1) {
-            pluriel = 'S';
-        }
-        $('#itemsInCartFooter').text(numberOfItemsinCart + ' ITEM' + pluriel)
-        $('#messageFooter').show();
-    });
 
 </script>
 
