--- a/BookPoolV2/Views/Shared/_Layout.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout.cshtml
@@ -2,8 +2,10 @@
 @using Microsoft.AspNet.Identity
 @using BookPool.DataObjects.EDM
 
-@{ 
+@{
     List<UsersAddress> userAddresses = ViewBag.UserAddresses as List<UsersAddress>;
+
+    List<UserCart> userCart = ViewBag.BooksInCart as List<UserCart>;
 }
 
 <!DOCTYPE html>
@@ -128,8 +130,27 @@
     <script src="/Content/js/quantity.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/classie/1.0.1/classie.min.js"></script>
     <script src="/Content/js/dynamics.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 </head>
 
+
+<div id="search-request-successful" class="modal modal-fixed-footer">
+    <div class="modal-content">
+        <h4>Success</h4>
+        <p>
+            Bookpool will manually search third party websites, groups and local libraries to find this book for you.
+        </p>
+        <p>
+            You can see all the books that we are currently searching for if you click <a href="@Url.Action("MyWishes","Home")">here</a>.
+        </p>
+        <p>
+            We will send you an email and an sms in the next 48 hours with the book's price.
+        </p>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat green">Agree</a>
+    </div>
+</div>
 
 
 <!-- Modal Structure -->
@@ -256,7 +277,7 @@
     </div>
 
 
-    <div class="row" id="messageFooter">
+    @*<div class="row" id="messageFooter">
         <div id="messageFooterContainer">
             <div id="messageFooterContainerLeft">
                 <div style="width:100%; height:25px; padding-top:5px;">
@@ -272,7 +293,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 
     <div class="navbarFooter" style="box-shadow: 0px 0 10px rgba(0, 0, 0, 0.8);">
         <div id="innerFooterContainer" style="margin:auto;">
@@ -342,10 +363,10 @@
         });
 
         $(document).ready(function () {
-            $('.collapsible').collapsible();
-        });
+            showItemsInCart();
 
-        $(document).ready(function () {
+            $('.collapsible').collapsible();
+            $('#search-request-successful').modal();
 
             $('.filterTab').tabs();
 
@@ -374,10 +395,6 @@
                     console.log(values);
                 });
             });
-
-        });
-
-        $(document).ready(function () {
 
             $('.category').click(function () {
                 var categoryID = $(this).attr('data-CategoryID');
@@ -441,13 +458,100 @@
                     BookID: bookID
                 },
                 success: function (data) {
-                    location.reload();
+                    $('#search-request-successful').modal('open');
+                    //location.reload();
                 },
                 error: function (request, error) {
-                    location.reload();
+                    $('#search-request-successful').modal('open');
+                    //location.reload();
                 }
             });
         });
+
+
+        $(document).on('click', '.addtoCart', function () {
+
+            var highlightElement = $(this);
+
+            highlightElement.addClass('highlighted');
+
+            setTimeout(function () {
+                highlightElement.removeClass('highlighted');
+            }, 1000);
+
+        });
+
+        $(document).on('click', '.addtoCart', function () {
+
+            var bookID = $(this).attr('data-BookID');
+            var bookPrice = $(this).attr('data-Price');
+
+            if (!!$.cookie('Books')) {
+                var books = $.parseJSON($.cookie("Books"));
+                books.push(
+                    { 'BookID': bookID, 'Price': bookPrice }
+                );
+                $.cookie("Books", JSON.stringify(books), { path: '/' });
+            } else {
+                var books = [
+                    { 'BookID': bookID, 'Price': bookPrice }
+                ];
+                $.cookie("Books", JSON.stringify(books), { path: '/' });
+            }
+
+
+            //var booksInCartJson = $.parseJSON($.cookie("Books"));
+            //var booksInCart = [];
+            //$.each(booksInCartJson, function (k, v) {
+            //    console.log('V = ' + v.Price);
+            //    booksInCart.push(v.BookID);
+            //});
+
+            $.ajax({
+                url: '@Url.Action("AddBookToCart","Home")',
+                type: 'POST',
+                dataType: 'json',
+                data: {
+                    BookID: bookID
+                },
+                success: function (data) {
+                    showItemsInCart();
+                },
+                error: function (request, error) {
+                    //location.reload();
+                }
+            });
+        });
+
+        function showItemsInCart() {
+            console.log($.cookie("Books"));
+            var books = $.parseJSON($.cookie("Books"));
+
+            if (books.length > 0) {
+
+                var price = 0;
+
+                $.each(books, function (k, v) {
+                    console.log('V = ' + v.Price);
+                    price = price + parseInt(v.Price);
+                });
+
+                var pluriel = '';
+                if (books.length > 1) {
+                    pluriel = 'S';
+                }
+
+                var booksInCart = books.length;
+
+                $('#itemsincartbadge').parent().find('.material-icons').css('color', 'var(--primaryRed)');
+                $('#itemsincartbadge').show();
+                $('#itemsInCartFooter').text(booksInCart + ' BOOK' + pluriel);
+                $('#itemsincartbadge').text(booksInCart);
+                $('#costOfItemsInCartFooter').text(price);
+                $('#messageFooter').show();
+            }
+        }
+
     </script>
 
 </body>
